# vitascale

./: CMakeLists.txt  blit.c  blit.h  config.c  config.h  log.c  log.h  main.c  utils.c  utils.h  vitascale.yml
